tests/invalid/invalid_character.out
tests/invalid/invalid_character.ri:1:2: error: invalid character: ```
    1 | `
      |  ^
rivet: error: could not compile module `invalid_character`, aborting due to previous error